refactor: simplified  backend API structure
